<resources>
    <string name="app_name">App</string>
    <string name="Recipes">Recipes</string>
    <string name="ShoppingList">Shopping List</string>
    <string name="MealPlanner">Meal Planner</string>
    <string name="PlusButton">Plus Button</string>
    <string name="item">Add Shopping Item</string>
    <string name="add">add</string>
    <string name="wRecipeName">Write Recipe Name</string>
    <string name="RecipeName">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="plus">+</string>
    <string name="wRecipeDescription">Write Recipe Description</string>
    <string name="addRecipe">Save Recipe</string>
    <string name="wRecipePreparation">Write Recipe Preparation</string>
    <string name="weekDialog">Choose week day:</string>

    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="preparation">Preparation</string>
</resources>