<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    app:layout_constraintCircleRadius="15dp"
    android:elevation="5dp"
    >

    <TextView
        android:id="@+id/weekDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weekDialog"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weekDialogTitle">

        <RadioButton
            android:id="@+id/weekDialogMonday"
            style="@style/radioWeekDays"

            android:text="@string/Monday"
            />

        <RadioButton
            android:id="@+id/weekDialogTuesday"
            style="@style/radioWeekDays"
            android:text="@string/Tuesday"/>

        <RadioButton
            android:id="@+id/weekDialogWednesday"
            style="@style/radioWeekDays"
            android:text="@string/Wednesday"
            />

        <RadioButton
            android:id="@+id/weekDialogThursday"
            style="@style/radioWeekDays"
            android:text="@string/Thursday"/>

        <RadioButton
            android:id="@+id/weekDialogFriday"
            style="@style/radioWeekDays"
            android:text="@string/Friday"/>

        <RadioButton
            android:id="@+id/weekDialogSaturday"
            style="@style/radioWeekDays"
            android:text="@string/Saturday"/>

        <RadioButton
            android:id="@+id/weekDialogSunday"
            style="@style/radioWeekDays"
            android:text="@string/Sunday"/>

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>