<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/createRecipeToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white"
            app:title="Add Recipe"

            />

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/createRecipeNameLabel"
                style="@style/TextViewCreateRecipe"

                android:text="@string/RecipeName"/>

            <EditText
                android:id="@+id/createRecipeTitle"
                style="@style/EditTextViewCreateRecipe"
                android:layout_height="55dp"
                android:hint="@string/wRecipeName" />
            <TextView
                android:id="@+id/createRecipeDescriptionLabel"
                android:text="@string/description"
                style="@style/TextViewCreateRecipe"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/createRecipeTitle"
                tools:ignore="MissingConstraints" />
            <EditText
                android:id="@+id/createRecipeDescription"
                android:layout_height="wrap_content"
                android:maxHeight="150dp"
                android:minHeight="55dp"
                android:hint="@string/wRecipeDescription"
                app:layout_constraintTop_toBottomOf="@id/createRecipeDescriptionLabel"
                style="@style/EditTextViewCreateRecipe"
                tools:ignore="MissingConstraints" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/createRecipeIngredientsLabel"
                    android:text="@string/ingredients"
                    style="@style/TextViewCreateRecipe"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/add_recipe_ingredient_button"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"

                    android:padding="0dp"
                    android:text="@string/plus"
                    app:layout_constraintStart_toEndOf="@+id/createRecipeIngredientsLabel"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredient_list_create_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="200dp"
                app:layout_constraintHeight_min="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/createRecipeIngredientsLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/createRecipePreparationLabel"
                android:text="@string/preparation"
                style="@style/TextViewCreateRecipe"
                app:layout_constraintTop_toBottomOf="@id/ingredient_list_create_recipe"
                android:layout_marginTop="25dp"
                tools:ignore="MissingConstraints"
                />

            <EditText
                android:id="@+id/createRecipePreparation"
                android:layout_height="wrap_content"
                android:hint="@string/wRecipePreparation"
                android:maxHeight="150dp"
                android:minHeight="55dp"
                app:layout_constraintTop_toBottomOf="@id/createRecipePreparationLabel"
                style="@style/EditTextViewCreateRecipe"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/createRecipeSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addRecipe"
                app:layout_constraintTop_toBottomOf="@id/createRecipePreparation"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="parent"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>